--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@ body {
 
 .app {
   font-family: Arial, Helvetica, sans-serif;
-  width: 90%;
-  height: 80%;
+  width: 95%;
+  height: 90%;
   top: 20%;
   left: 20%;
   color: white;
@@ -85,4 +85,7 @@ body {
 .loc-weather {
   display: flex;
   margin-bottom: 30px;
+}
+.slider {
+  display: inline;
 }
