--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,13 @@
-body {
+/* body {
   margin: 0;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
 .app {
   font-family: Arial, Helvetica, sans-serif;
-  width: 95%;
+  width: 100%;
   height: 90%;
   top: 20%;
   left: 20%;
@@ -34,13 +34,8 @@ body {
 }
 
 .btntemp:focus {
-  color: yellow;
-}
-
-.search-bar {
-  width: 50%;
-  background-color: transparent;
-  border-color: transparent;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-width: 2px;
 }
 
 .location-box {
@@ -86,6 +81,38 @@ body {
   display: flex;
   margin-bottom: 30px;
 }
-.slider {
-  display: inline;
+
+.interval-btn {
+  background-color: transparent;
+  color: white;
+  border-color: transparent;
+}
+
+.interval-btnd {
+  background-color: transparent;
+  color: white;
+  border-color: transparent;
+  margin-left: 4px;
+}
+.underline {
+  width: 3rem;
+  height: 0.25rem;
+  margin-top: 0.5rem;
+  background: white;
+}
+.forecast {
+  margin-top: 1rem;
+  border-top: white;
+  border-bottom: white;
+  display: flex;
+  flex-wrap: nowrap;
+
+  align-items: center;
+}
+
+.forecast .forecast-item {
+  display: flex;
+  float: left;
+  flex-wrap: nowrap;
+  margin: 4px;
 }
