--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,10 @@
 
 .app {
   font-family: Arial, Helvetica, sans-serif;
-  width: 100%;
-  height: 90%;
-  top: 20%;
-  left: 20%;
+  /* width: 100%;
+  height: 100%; */
+  top: 30%;
+  left: 30%;
   color: white;
   padding: 30px;
   background-image: url("../assets/dominik-lange-ZUvF7qEIcVI-unsplash.jpg");
@@ -27,9 +27,9 @@
 }
 
 .btntemp {
-  border: 1px;
+  border: 1px solid white;
   background-color: transparent;
-  border-color: transparent;
+  /* border-color: transparent; */
   color: white;
 }
 
@@ -101,13 +101,12 @@
   background: white;
 }
 .forecast {
+  font-size: 22px;
   margin-top: 1rem;
   border-top: white;
   border-bottom: white;
   display: flex;
   flex-wrap: nowrap;
-
-  align-items: center;
 }
 
 .forecast .forecast-item {
@@ -115,4 +114,15 @@
   float: left;
   flex-wrap: nowrap;
   margin: 4px;
+  margin-left: 2rem;
+}
+
+.icon {
+  font-size: 60px;
+  color: lightblue;
+}
+
+.main-icon {
+  font-size: 80px;
+  color: lightblue;
 }
