--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,9 @@
-/* body {
-  margin: 0;
-
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-} */
-
 .app {
-  font-family: Arial, Helvetica, sans-serif;
-  /* width: 100%;
-  height: 100%; */
-  top: 30%;
-  left: 30%;
+  font-family: sans-serif;
+  width: 70%;
+  height: 20%;
   color: white;
+  margin: 100px;
   padding: 30px;
   background-image: url("../assets/dominik-lange-ZUvF7qEIcVI-unsplash.jpg");
   background-size: cover;
@@ -124,12 +116,21 @@
   margin-left: 2rem;
 }
 
-.icon {
-  font-size: 60px;
+.time {
+  color: rgb(200, 200, 200);
+}
+
+.icon-night {
+  font-size: 55px;
   color: lightblue;
 }
 
+.icon-sun {
+  font-size: 55px;
+  color: orange;
+}
+
 .main-icon {
-  font-size: 80px;
+  font-size: 70px;
   color: lightblue;
 }
